fix: z-index of HoverGroup

--- a/packages/theme-default/src/layout/DocLayout/index.scss
+++ b/packages/theme-default/src/layout/DocLayout/index.scss
@@ -1,7 +1,7 @@
 :root {
   // z-index
   --rp-z-index-nav-menu: 30;
-  --rp-z-index-nav: 40;
+  --rp-z-index-nav: 50;
   --rp-z-index-backdrop: 60;
   --rp-z-index-sidebar: 70;
   --rp-z-index-aside: 40;
